# mira-client

./: .gitignore  Cargo.toml  README.md  index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
apps/mira-client/: .env.example  .gitignore  README.md  index.html  mira-client.toml  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
apps/mira-client/e2e/support/: mockClientApi.ts
apps/mira-client/files/assets/: index.html
apps/mira-client/src/: App.css  App.tsx  gameSession.ts  i18n.ts  main.tsx  notifications.tsx  runtimeConfig.ts  settings.ts  settingsStore.ts
apps/mira-client/src-tauri/: Cargo.toml  tauri.conf.json  tauri.desktop-dev.conf.json
apps/mira-client/tests/: profile.test.ts  settings.test.ts
apps/mira-game-client/: Cargo.toml
apps/mira-game-server/: Cargo.toml
apps/mira-installer/src/: App.tsx  i18n.ts
apps/mira-installer/src-tauri/: Cargo.toml
crates/game-logic/: Cargo.toml
crates/game-shared/: Cargo.toml
crates/game-world/: Cargo.toml
scripts/: merge-openapi.mjs  patch-tauri-appimage-env.sh
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/api/: client.ts  config.ts  http.ts
src/auth/: config.ts  keycloak.ts  storage.ts
src/components/: FriendCard.tsx  SettingsModal.tsx  Sidebar.tsx  TitleBar.tsx
src/locales/: de.ftl  en.ftl
src/pages/: Authentication.tsx  ChampionSelection.tsx  Client.tsx
src/types/: ui.ts
src/utils/: profile.ts
(+30 files in other folders)
